--- a/frontend/src/components/navbar.css
+++ b/frontend/src/components/navbar.css
@@ -12,7 +12,7 @@
   }
   
   .navbar a {
-    color: #fff;
+    color: #ffffff;
     margin: 0 5rem;
     text-decoration: none;
     font-size: 0.8rem;
