--- a/frontend/src/components/GamePage.css
+++ b/frontend/src/components/GamePage.css
@@ -5,13 +5,13 @@
     font-family: sans-serif;
 }
 body{
-    background-color: #f0f0f0;
+    background-color: #f0f0f0
 }
 .card-container{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 100px;
+    margin-top: 0;
 }
 .card{
     width: 325px;
@@ -98,6 +98,7 @@ body{
   .content {
     display: flex;
     flex: 1; /* Take up remaining vertical space */
+    padding: 0;
   }
   
   /* Sidebar styling */
@@ -128,62 +129,9 @@ body{
     background-color: #ddd; /* Highlight on hover */
   }
   
-  /* Games section styling */
-  .games {
-    flex: 1; /* Take up remaining space */
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    padding: 20px;
-  }
-  
-  .game-card {
-    width: 100%; /* Adjust as needed */
-    max-width: 300px; /* Maximum width of each game card */
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    overflow: hidden;
-  }
-  
-  .game-image {
-    width: 100%;
-    height: 200px; /* Adjust height as needed */
-    object-fit: cover;
-  }
-  
-  .game-details {
-    padding: 16px;
-  }
-  
-  .game-details h3 {
-    font-size: 18px;
-    margin-bottom: 8px;
-  }
-  
-  .game-details p {
-    font-size: 14px;
-    color: #666;
-    line-height: 1.5;
-  }
-  
-  .btn {
-    display: inline-block;
-    padding: 8px 16px;
-    background-color: #333;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 4px;
-    margin-top: 8px;
-  }
-  
-  .btn:hover {
-    background-color: #555;
-  }
-  
-  h1{
+  .header-content {
+    color: rgb(115, 138, 138);
     text-align: center;
-    color: aqua;
     font-size: 28px;
     margin-bottom: 8px;
 }
