--- a/frontend/src/components/addgame.css
+++ b/frontend/src/components/addgame.css
@@ -1,11 +1,18 @@
 .add-game-container {
-    max-width: 600px;
+    max-width: 700px;
     margin: 0 auto;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #222121;
     border-radius: 5px;
-    background-color: #f9f9f9;
+    background-color: #faf8f8;
   }
+.page{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+}
   
   .add-game-form {
     display: flex;
@@ -22,7 +29,7 @@
   .add-game-input {
     margin-bottom: 10px;
     padding: 8px;
-    font-size: 16px;
+    font-size: 14px;
     border: 1px solid #ccc;
     border-radius: 4px;
   }
@@ -31,6 +38,7 @@
     margin-bottom: 8px;
     font-size: 16px;
     color: #555;
+    width: 400px;
   }
   
   .add-game-button {
