--- a/frontend/src/components/cart.css
+++ b/frontend/src/components/cart.css
@@ -1,5 +1,5 @@
 .cart-modal {
-    background-color: #f0f0f0;
+    background-color: hsl(209, 58%, 53%);
     padding: 20px;
     border-radius: 8px;
     height: auto;
